--- a/UI/doctorUI.html
+++ b/UI/doctorUI.html
@@ -66,7 +66,7 @@
 
        <nav id="nav-menu-container">
          <ul class="nav-menu">
-           <li><a href="./patientLogin.html">Patient</a></li>
+           <li><a href="./patientUI.html">Patient</a></li>
            <li><a href="./nurseLogin.html">Nurse</a></li>
            <li><a href="./doctorLogin.html">Doctor</a></li>
          </ul>
