Changed Title Margin in UI

--- a/UI/nurseUI-viewAll.html
+++ b/UI/nurseUI-viewAll.html
@@ -92,7 +92,7 @@
     Intro Section
   ============================-->
   <section id="intro">
-    <div class="intro-content" id='app'>
+    <div class="intro-content" id='app'><br>
       <h2 style="font-size:xx-large;"><span>View All </span>Patient Appointments</h2>
       <div class="container"><!-- container START-->
         <div class="table-responsive">
