--- a/UI/nurseUI-confirm.html
+++ b/UI/nurseUI-confirm.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Confirm Appointments</title>
@@ -12,7 +13,9 @@
   <link href="img/nurse.png" rel="nurse-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700"
+    rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +30,14 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
-  
+  <style>
+    .btn-blue {
+      background: #0c2e8a;
+      border: 2px solid #0c2e8a;
+      color: white;
+    }
+  </style>
+
 
   <!-- =======================================================
     Theme Name: Reveal
@@ -63,98 +73,104 @@
   </header><!-- #header -->
 
 
-    <!--==========================
+  <!--==========================
       Call To Action Section
     ============================-->
-    <section id="call-to-action" class="wow fadeInUp md-margintop">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9 text-center text-lg-left">
-            <h3 class="cta-title">Back to Nurse Administration Portal Homepage</h3>
-          </div>
-          <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="./nurseUI.html">Home</a>
-          </div>
+  <section id="call-to-action" class="wow fadeInUp md-margintop">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9 text-center text-lg-left">
+          <h3 class="cta-title">Back to Nurse Administration Portal Homepage</h3>
         </div>
-
+        <div class="col-lg-3 cta-btn-container text-center">
+          <a class="cta-btn align-middle" href="./nurseUI.html">Home</a>
+        </div>
       </div>
-    </section><!-- #call-to-action -->
+
+    </div>
+  </section><!-- #call-to-action -->
   <!--==========================
     Intro Section
   ============================-->
-<div id="app">
-  <section id="intro">
-    <div class="intro-content">
-      <h2 style="font-size:xx-large;">Patient Appointments <span>Confirmation</span></h2>
-      <div class="table-responsive">
-        <table class="table table-hover table-bordered" v-if="hasAppointments">
-          <thead class="table-info">
-            <tr>
-              <th scope="col">Appointment ID</th>
-              <th scope="col">Patient Name</th>
-              <th scope="col">Appointment Date</th>
-              <th scope="col">Appointment Time</th>
-              <th scope="col">Appointed Doctor ID</th>
-              <th scope="col">Appointed Doctor Name</th>
-              <th scope="col">Status</th>
-              <th scope="col">Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- create a for loop in javascript after calling microservice api
+  <div id="app">
+    <section id="intro">
+      <div class="intro-content">
+        <h2 style="font-size:xx-large;">Patient Appointments <span>Confirmation</span></h2>
+        <div class="container">
+          <!-- container START-->
+          <div class="table-responsive">
+            <table class="table table-hover table-bordered" v-if="hasAppointments">
+              <thead style="background-color: #0c2e8a; color: white">
+                <tr>
+                  <th scope="col">Appointment ID</th>
+                  <th scope="col">Patient Name</th>
+                  <th scope="col">Appointment Date</th>
+                  <th scope="col">Appointment Time</th>
+                  <th scope="col">Appointed Doctor ID</th>
+                  <th scope="col">Appointed Doctor Name</th>
+                  <th scope="col">Status</th>
+                  <th scope="col">Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- create a for loop in javascript after calling microservice api
             to get patient booking with status "matched" -->
-            <tr v-for="(record,index) in appointments" class="table-light">
-              <th scope="row"> {{ record.appointment_id }} </th>
-              <td>{{ record.patient_name }}</td>
-              <td> {{ date[index] }} </td>
-              <td> {{ record.appointment_time }} </td>
-              <td>{{ record.did }}</td>
-              <td>{{ record.doctor_name }}</td>
-              <td>{{ record.status }}</td>
-              <td><button class="btn btn-success" data-toggle="modal" data-target="#confirmModal" @click="updateConfirmDetails(index)">Confirm</button></td>
-            </tr>
-          </tbody>
-        </table>
-        
-        <div class="text-danger" v-else>{{ message }}</div> <!-- Error message if can't get data from microservice-->
+                <tr v-for="(record,index) in appointments" class="table-light">
+                  <th scope="row"> {{ record.appointment_id }} </th>
+                  <td>{{ record.patient_name }}</td>
+                  <td> {{ date[index] }} </td>
+                  <td> {{ record.appointment_time }} </td>
+                  <td>{{ record.did }}</td>
+                  <td>{{ record.doctor_name }}</td>
+                  <td>{{ record.status }}</td>
+                  <td><button class="btn btn-blue" data-toggle="modal" data-target="#confirmModal"
+                      @click="updateConfirmDetails(index)">Confirm</button></td>
+                </tr>
+              </tbody>
+            </table>
+
+            <div class="text-danger" v-else>{{ message }}</div>
+            <!-- Error message if can't get data from microservice-->
+          </div>
+        </div> <!-- Container END-->
       </div>
-    </div>
 
-    <div id="intro-carousel" class="owl-carousel" >
-      <div class="item" style="background-image: url('img/intro-carousel/1.jpg');"></div>
-      <div class="item" style="background-image: url('img/intro-carousel/2.jpg');"></div>
-      <div class="item" style="background-image: url('img/intro-carousel/3.jpg');"></div>
-      <div class="item" style="background-image: url('img/intro-carousel/4.jpg');"></div>
-      <div class="item" style="background-image: url('img/intro-carousel/5.jpg');"></div>
-    </div>
+      <div id="intro-carousel" class="owl-carousel">
+        <div class="item" style="background-image: url('img/intro-carousel/1.jpg');"></div>
+        <div class="item" style="background-image: url('img/intro-carousel/2.jpg');"></div>
+        <div class="item" style="background-image: url('img/intro-carousel/3.jpg');"></div>
+        <div class="item" style="background-image: url('img/intro-carousel/4.jpg');"></div>
+        <div class="item" style="background-image: url('img/intro-carousel/5.jpg');"></div>
+      </div>
 
-    <!-- Modal -->
-    <!-- display success/error alert with if condition -->
-<div v-if='showModal' class="modal fade" id="confirmModal" @click='closeModal' tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content" style="background-color:rgb(207, 252, 226);">
-      <!-- <div class="modal-header">
+      <!-- Modal -->
+      <!-- display success/error alert with if condition -->
+      <div v-if='showModal' class="modal fade" id="confirmModal" @click='closeModal' tabindex="-1" role="dialog"
+        aria-labelledby="confirmModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content" style="background-color:rgb(207, 252, 226);">
+            <!-- <div class="modal-header">
         <h5 class="modal-title" id="confirmModalLabel">You have successfully confirmed an appointment!</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div> -->
-      <div class="modal-body mt-4 text-center">
-        <h4 class="font-weight-bold ">You have successfully confirmed this appointment!</h4><br>
-        <h5>A notification has been sent to the patient!</h5><br>
-          Patient's Name: {{ appointments[index].patient_name }} <br>
-          Appointed Doctor: {{ appointments[index].doctor_name }} <br>
-          Appointment Date: {{ date[index] }} <br>
-          Appointment Time: {{ appointments[index].appointment_time }} <br><br><br>
+            <div class="modal-body mt-4 text-center">
+              <h4 class="font-weight-bold ">You have successfully confirmed this appointment!</h4><br>
+              <h5>A notification has been sent to the patient!</h5><br>
+              Patient's Name: {{ appointments[index].patient_name }} <br>
+              Appointed Doctor: {{ appointments[index].doctor_name }} <br>
+              Appointment Date: {{ date[index] }} <br>
+              Appointment Time: {{ appointments[index].appointment_time }} <br><br><br>
+            </div>
+          </div>
+        </div>
       </div>
-      </div>
-    </div>
   </div>
-</div>
 
   </section>
 
-</div>
+  </div>
 
 
 
@@ -177,16 +193,17 @@
   <script src="js/nurse-confirm.js"></script>
 
   <!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-crossorigin="anonymous"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 
 </body>
+
 </html>
